# CV_course

task_1/: CMakeLists.txt  main.cpp
task_1/bash_build/: task_1
task_2/: CMakeLists.txt  Report.ipynb  main.cpp
task_2/bash_build/: task_2
task_3/: CMakeLists.txt  main.cpp
task_4/: CMakeLists.txt  README.md  main.cpp
task_5/: CMakeLists.txt  Report.html  Report.ipynb  main.cpp
task_6/: README.md  main.py  task-6-code.ipynb  task6_set1_labels.csv  task6_set2_labels.csv  test_df.csv  train_df.csv
